Add standalone TikTok GUI workflow with launcher, docs, and range batch support

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@ node_modules/
 
 # Build / render outputs
 output/
+app-data/
 
 # Environment / secrets
 .env
 .env.*
+!.env.example
 
 # Editor / OS files
 .serena/
