--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "render:csv": "node scripts/render-from-csv.mjs"
+    "render:csv": "node scripts/render-from-csv.mjs",
+    "app:start": "node app/server.mjs"
   },
   "dependencies": {
     "@remotion/bundler": "4.0.330",
     "@remotion/google-fonts": "^4.0.419",
     "@remotion/renderer": "4.0.330",
+    "express": "^4.21.2",
+    "googleapis": "^150.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remotion": "4.0.330"
